syntax = "proto3";

package raftpb;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.goproto_getters_all) = false;

// (etcd raft.CampaignType)
enum CAMPAIGN_TYPE {
	ELECTION = 0;
	TRANSFER = 1;
}
